Istio/Azure/orig_backup/product-service-azure-dev/deploy-product-service-ireland-dev-azure.yaml
apiVersion: v1
kind: Service
metadata:
  name: product-service
  labels:
    app: product-service
    version: v1
spec:
  ports:
  - port: 8080
    name: http-productservice
    targetPort: 8080
  selector:
    app: product-service
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: product-service
  labels:
    app: product-service
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: product-service
  template:
    metadata:
      labels:
        app: product-service
        version: v1
    spec:
      containers:
      - name: product-service
        image: acrwedevgupuy7.azurecr.io/apimgt/product-service:1.0.124-SNAPSHOT            # 1.0.88-SNAPSHOT
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: certs
          mountPath: "/etc/certs"
          readOnly: true
        resources:
          requests:
            cpu: 500m
            memory: 200Mi
        #livenessProbe:
        #  httpGet:
        #    path: /actuator/info
        #    port: 8080
        #    scheme: HTTP
        #  initialDelaySeconds: 30
        #  periodSeconds: 120
        #  successThreshold: 1
        #readinessProbe:
        #  httpGet:
        #    path: /actuator/health
        #    port: 8080
        #    scheme: HTTP
        #  initialDelaySeconds: 10
        #  periodSeconds: 5
        #  successThreshold: 3
      volumes:
      - name: certs
        secret:
          secretName: istio.default
